# Biblioteca-Fast

./: .env.example  .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
biblioteca_fast/: app.py
biblioteca_fast/core/: config.py
biblioteca_fast/database/: __init__.py  connection.py  models.py
biblioteca_fast/models/: emprestimo.py  livro.py  usuario.py
biblioteca_fast/routers/: emprestimos_router.py  livros.py  usuarios_router.py
biblioteca_fast/schemas/: __init__.py  emprestimo.py  livro.py  usuario.py
biblioteca_fast/services/: emprestimos.py  livros.py  usuarios.py
biblioteca_fast/static/: base.css  livros.css  style.css
biblioteca_fast/template/: base.html  login.html  usuario.html
biblioteca_fast/templates/: livros.html
tests/: test_app.py
